k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kredius
  namespace: kredius
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kredius.lab
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kredius-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kredius-frontend
                port:
                  number: 8080
    - host: kredius.10.0.0.49.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kredius-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kredius-frontend
                port:
                  number: 8080
